Added test for methods setPositiveWords, setNegativeWords